force-app/main/default/objects/leankor__ResourceType__c/leankor__ResourceType__c.object-meta.xml
<CustomObject>
    <description>This contains the definition of resource type by Category, Sub-Category and Account.</description>
    <label>Resource Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Resource Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>