force-app/main/default/objects/leankor__ResourceType__c/fields/leankor__ExpenseSubCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseSubCategory__c</fullName>
    <description>Values from global picklist</description>
    <label>Expense Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leankor__ExpenseCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leankor__ExpenseSubCategory</valueSetName>
    </valueSet>
</CustomField>