force-app/main/default/objects/leankor__ResourceType__c/fields/leankor__ExternalHourlyRate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExternalHourlyRate__c</fullName>
    <description>What you would charge the customer for hourly rate (usually 3x the Internal rate).</description>
    <label>External Hourly Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>