force-app/main/default/objects/leankor__ResourceType__c/fields/leankor__InternalHourlyRate__c.field-meta.xml
<CustomField>
    <fullName>leankor__InternalHourlyRate__c</fullName>
    <description>Fully burden rate which includes employee benefits and other overhead.</description>
    <label>Internal Hourly Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>