force-app/main/default/objects/leankor__ResourceType__c/validationRules/leankor__PreventDuplicateResourceType.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__PreventDuplicateResourceType</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISNEW(),Name =(VLOOKUP($ObjectType.leankor__ResourceType__c.Fields.Name , $ObjectType.leankor__ResourceType__c.Fields.Name, Name))),AND( ISCHANGED(Name ) ,Name =(VLOOKUP($ObjectType.leankor__ResourceType__c.Fields.Name , $ObjectType.leankor__ResourceType__c.Fields.Name, Name))))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Resource type name already exists, duplicate is not allowed.</errorMessage>
</ValidationRule>